# synapse-custom-auth

./: .gitignore  Dockerfile  generate_token.py  homeserver.yaml  pyproject.toml
custom_auth/: provider.py
